spark/006-spark-ui-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: processing-batch-ui
  namespace: app
  labels:
    app: processing-batch-ui
spec:
  type: ClusterIP
  ports:
    - port: 4040
      targetPort: 4040
      name: http
  selector:
    app.kubernetes.io/name: processing-batch
    sparkoperator.k8s.io/scheduled-app-name: processing-batch
    spark-role: driver
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: processing-stream-ui-ingress
  namespace: app
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-body-size: 10m
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - spark-stream.nukenake.xyz
      secretName: spark-stream-nukenake-xyz-tls
  rules:
    - host: spark-stream.nukenake.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: processing-stream-ui-svc
                port:
                  number: 4040
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: processing-batch-ui-ingress
  namespace: app
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-body-size: 10m
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - spark-batch.nukenake.xyz
      secretName: spark-batch-nukenake-xyz-tls
  rules:
    - host: spark-batch.nukenake.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: processing-batch-ui
                port:
                  number: 4040
